--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -1,3 +1,4 @@
+{%  load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,7 +10,7 @@
 
     <meta name="description" content="Pagina do Curso Pytohn pro">
     <meta name="author" content="flavio Antonio">
-
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
     <script src="/static/js/jquery.min.js"></script>
@@ -38,15 +39,11 @@
 
             <div class="jumbotron">
                 <h2>
-                    Hello, world!
+                    Curso de Python com Luciano Ramalho
                 </h2>
                 <p>
-                    This is a template for a simple marketing or informational website. It includes a large callout
-                    called the hero unit and three supporting pieces of content. Use it as a starting point to create
-                    something more unique.
-                </p>
-                <p>
-                    <a class="btn btn-primary btn-large" href="#">Learn more</a>
+                    Confira rm breve mais informaçoes sobre o curso que sera ministrado em breve pelo autor do livro
+                    <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank" >Python Fluente</a>
                 </p>
             </div>
         </div>
@@ -55,15 +52,20 @@
         <div class="col-md-12">
             <div class="card">
                 <h5 class="card-header">
-                    Card title
+                    Mais detalhes sobre o instrutor
                 </h5>
                 <div class="card-body">
                     <p class="card-text">
-                        Card content
+                        <img src="{% static 'img/luciano-ramalho.png' %}" alt="..."
+                             class="img-thumbnail float-left mr-3"/>
+                        Ramalho é sócio e professor na <a href="https://www.python.pro.br">Python
+                        Pro</a> e autor do Livro Python Fluente. Foi diretor técnico do Brasil Online, primeiro portal
+                        da Abril S/A na Web. Liderou times para os portais IDG Now, BOL, UOL, AOL Brasil e outros,
+                        usando Python desde 1998. Como instrutor, atendeu clientes como Citibank, CPqD, Serpro,
+                        Presidência da República, Globo.com e Itaú. Palestrante em eventos internacionais como FISL,
+                        PyCon US e OSCON. Ajudou a criar a Associação Python Brasil e foi seu presidente. É membro da
+                        Python Software Foundation e fundador do Garoa Hacker Clube, o primeiro hackerspace do Brasil.
                     </p>
-                </div>
-                <div class="card-footer">
-                    Card footer
                 </div>
             </div>
         </div>
