--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -10,27 +10,28 @@
 
     <meta name="description" content="Pagina do Curso Pytohn pro">
     <meta name="author" content="flavio Antonio">
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/scripts.js"></script>
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
 
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 
-    </ul>
-  </div>
+        </ul>
+    </div>
 </nav>
 
 <div class="container-fluid">
@@ -43,7 +44,7 @@
                 </h2>
                 <p>
                     Confira rm breve mais informaçoes sobre o curso que sera ministrado em breve pelo autor do livro
-                    <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank" >Python Fluente</a>
+                    <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank">Python Fluente</a>
                 </p>
             </div>
         </div>
