--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -42,11 +42,35 @@
                 <h2>
                     Curso de Python com Luciano Ramalho
                 </h2>
-                <p>
-                    Confira rm breve mais informaçoes sobre o curso que sera ministrado em breve pelo autor do livro
-                    <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank">Python Fluente</a>
-                </p>
-            </div>
+                <h4 class="mt-4"> Entre na fila de espera</h4>
+
+                <form action="https://gmail.us14.list-manage.com/subscribe/post?u=9333cb71ead5d6d48f15bf662&amp;id=af9a8a9723"
+                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                      class="form-row align-items-center" target="_blank" novalidate>
+                    <div class="form-row align-items-center">
+                        <div class="col-auto">
+                            <label class="sr-only" for="mce-EMAIL">Email</label>
+                            <input type="email" value="" name="EMAIL" class="form-control required " id="mce-EMAIL"
+                                   placeholder="exemplo@email.com">
+                        </div>
+                        <div class="col-auto">
+                            <label class="sr-only" for="mce-FNAME">Email</label>
+                            <input type="text" value="" name="FNAME" class="form-control " id="mce-FNAME"placeholder="Seu Nome">
+                        </div>
+
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                                                                                      name="b_9333cb71ead5d6d48f15bf662_af9a8a9723"
+                                                                                                      tabindex="-1"
+                                                                                                      value=""></div>
+                        <div class="col-auto">
+                            <input type="submit" value="Salvar" name="subscribe" id="mc-embedded-subscribe"
+                                           class="btn btn-primary">
+                        </div>
+                    </div>
+                </form>
+
+
         </div>
     </div>
     <div class="row">
@@ -59,8 +83,9 @@
                     <p class="card-text">
                         <img src="{% static 'img/luciano-ramalho.png' %}" alt="..."
                              class="img-thumbnail float-left mr-3"/>
-                        Ramalho é sócio e professor na <a href="https://www.python.pro.br">Python
-                        Pro</a> e autor do Livro Python Fluente. Foi diretor técnico do Brasil Online, primeiro portal
+                        Ramalho é sócio e professor na <a href="https://www.python.pro.br">Python Pro</a> e autor do
+                        <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank">Python Fluente</a>
+                        Livro Python Fluente. Foi diretor técnico do Brasil Online, primeiro portal
                         da Abril S/A na Web. Liderou times para os portais IDG Now, BOL, UOL, AOL Brasil e outros,
                         usando Python desde 1998. Como instrutor, atendeu clientes como Citibank, CPqD, Serpro,
                         Presidência da República, Globo.com e Itaú. Palestrante em eventos internacionais como FISL,
@@ -77,7 +102,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                 <h3>Entre em Contato</h3>
+                <h3>Entre em Contato</h3>
                 <address>
                     +55 12 997-441-854
                     <br/>
