Inserçao botao login

--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -44,6 +44,7 @@
             </li>
 
         </ul>
+      <a  class="btn btn-light my-2" href="{% url 'login' %}">Entrar</a>
     </div>
 </nav>
 
